Refactor command output handling: Introduce AbstractOutput and related classes for structured output management, update CommandContext to utilize TerminalContext for improved command execution feedback, and enhance error handling with custom output messages.
Signed-off-by: ImNotStable <jeremiahhughes06@gmail.com>